fixed CSS alignment for mobile

--- a/src/index.css
+++ b/src/index.css
@@ -24,14 +24,23 @@ code {
   justify-content: center;
 }
 
+.entry-area, .compare-area {
+  width: 50%;
+}
+
 @media (max-width: 700px) {
   .content-wrap {
     flex-direction: column;
+    align-items: center;
+  }
+  .entry-area, .compare-area {
+    width: 95%;
   }
 }
 
-.entry-area, .compare-area {
-  width: 50%;
+.entry-area {
+  max-width: 20em;
+  margin-right:2em;
 }
 
 .add-table {
